# AgentLearning

./: .gitignore  Makefile  README.md  agent_thread.py  application.py  config.json  llm_api.py  main.py  message_formatter.py  message_queue.py  plan.md  pyproject.toml  rag_service.py  requirements-chromadb.txt  requirements-mysql.txt  requirements.txt  shared_context.py  tools.py  user_thread.py
CLI/: __init__.py  user_thread.py
agent/: __init__.py  agent.py  agent_executor.py
agent/impl/: __init__.py  react_agent.py  react_agent_context.py
application/: __init__.py  agent_thread.py  application.py  question.md  user_thread.py
backend/: agent_thread.py
budget/: __init__.py
config/: __init__.py  config.json  config.py
context/: __init__.py  agent_context.py  formatter.py  shared_context.py
docs/: DDD领域驱动设计.md  TD.md  agent_refactor_plan.md  ddd_refactoring.md  event_storming_craft.md  knowledge1.md  knowledge2.md  llm_response_schema.md  plan.md  refactoring_proposal.md
infra/db/: registry.py
llm/: __init__.py  deepseek_api.py  llm_api.py  message_formatter.py  openai_api.py  qwen_api.py  registry.py
queue/: message_queue.py
rag/: rag_service.py
runtime/: agent_storage.db
schemas/: __init__.py  budget.py  consts.py  errors.py  types.py
src/: main.py
storage/: __init__.py  bootstrap_documents.py  contracts.py  registry.py  storage.py
strategy/: strategy.py
thread/: agent_thread.py  user_thread.py
tools/: __init__.py  registry.py  tools.py
tracing/: __init__.py  tracer.py
utils/: http_client.py  log.py  thread_event.py  timezone.py
(+237 files in other folders)
