[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoagent"
version = "0.1.0"
description = "A lightweight local Python agent project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
chromadb = [
    "chromadb>=0.5,<1.0",
]
excel = [
    "openpyxl>=3.1,<4.0",
]
mysql = [
    "pymysql>=1.1,<2.0",
]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
